src/styles/Projeto.module.css
.containerProjects{
  background-color: var(--blue-600);
  padding: 1.25rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  
}

.containerProjects h1 {
  color: var(--blue-300)
}
.cardProjects{
  display: flex;
  gap: 32px;
  flex-wrap: wrap;
  justify-content: center;
}

.projectImg{
  width: 29.6875rem;
  border-radius: .625rem;
}

.projectImgModal{
  width: 37.5rem;
  border-radius: .625rem;
}

.modalProjects {
  display: flex;
  flex-direction: column;
  position: absolute; 
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  background: rgb(255, 255, 255); 
  border-radius: .9375rem; 
  outline: none; 
  padding: 1.25rem;
  
}

.modalProjects p {
  max-width: 37.5rem;
  padding: .3125rem;
  font-size: 1.1rem;
  text-align: justify;
  text-indent: 1.5em;
  word-spacing: .2375rem;
}

.modalTec {
  font-size: 1.1rem;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  padding: 20px 0;
}

.modalTec p{
  color: var(--blue-600);
  font-weight: 600;
}

.modalLinks{
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  padding: 20px 0;
}

.modalLinks a{
  text-decoration: none;
  text-align: center;
  width: 175px;
  border-radius: 10px;
  padding: 8px;
}

.modalLinks a:nth-child(odd){
  background-color: var(--blue-100);
  color: var(--blue-600);
  font-weight: 600;
}

.modalLinks a:nth-child(even){
  color: var(--blue-100);
  font-weight: 600;
  background-color: var(--blue-600);
}

.modalBtn{
  position: absolute;
  top: 3%;
  left: 91%;
  
}

.btnCloseModalIcon{
  font-size: 1.875rem;
  color: var(--blue-600);
}


@media(max-width: 34.375rem) {
  .modalProjects{
    height: 90%;
    width: 90%;
    overflow: auto;
  }
  .modalProjects h2{
    font-size: 1.2rem;
    padding: 10px 0 ;
  }

  .projectImg{
    width: 250px;
  }
  .projectImgModal{
    border-bottom: 10px;
    padding-top: 10px;
    width: auto;
  }
  .modalBtn{
    top: 0.5%;
    left: 90%;    
  }
  .btnCloseModalIcon{
    font-size: 22px;

  }
  .modalProjects p {
    line-height: 1.6rem;
    padding: .3125rem;
    font-size: 1.1rem;
    text-align: justify;
    text-indent: 0.8rem;

  }

  .modalTec{
    flex-direction: column;
  }
  .modalLinks{
    min-height: 150px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-around;
  }

  .modalLinks a div{
    font-size: 0.8rem;
  }

}

